--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
         .input-controls {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: 1fr 1fr;
             gap: 0.75rem;
         }
 
@@ -708,17 +708,13 @@
                 <div class="input-grid">
                     <div class="input-block">
                         <div class="input-header">
-                            <span class="input-label">Alan Bilgisi</span>
+                            <span class="input-label">Alan Bilgisi (Ağırlık: %80)</span>
                             <span class="input-max">Max: 100</span>
                         </div>
                         <div class="input-controls">
                             <div class="input-wrapper">
                                 <span class="input-mini-label">Doğru</span>
                                 <input type="number" id="alan-d" min="0" max="100" value="0">
-                            </div>
-                            <div class="input-wrapper">
-                                <span class="input-mini-label">Yanlış</span>
-                                <input type="number" id="alan-y" min="0" max="100" value="0">
                             </div>
                             <div class="input-wrapper">
                                 <span class="input-mini-label">Boş</span>
@@ -729,17 +725,13 @@
 
                     <div class="input-block">
                         <div class="input-header">
-                            <span class="input-label">Genel Kültür</span>
+                            <span class="input-label">Genel Kültür (Ağırlık: %13.33)</span>
                             <span class="input-max">Max: 20</span>
                         </div>
                         <div class="input-controls">
                             <div class="input-wrapper">
                                 <span class="input-mini-label">Doğru</span>
                                 <input type="number" id="gk-d" min="0" max="20" value="0">
-                            </div>
-                            <div class="input-wrapper">
-                                <span class="input-mini-label">Yanlış</span>
-                                <input type="number" id="gk-y" min="0" max="20" value="0">
                             </div>
                             <div class="input-wrapper">
                                 <span class="input-mini-label">Boş</span>
@@ -750,17 +742,13 @@
 
                     <div class="input-block">
                         <div class="input-header">
-                            <span class="input-label">Yabancı Dil</span>
+                            <span class="input-label">Yabancı Dil (Ağırlık: %6.67)</span>
                             <span class="input-max">Max: 10</span>
                         </div>
                         <div class="input-controls">
                             <div class="input-wrapper">
                                 <span class="input-mini-label">Doğru</span>
                                 <input type="number" id="dil-d" min="0" max="10" value="0">
-                            </div>
-                            <div class="input-wrapper">
-                                <span class="input-mini-label">Yanlış</span>
-                                <input type="number" id="dil-y" min="0" max="10" value="0">
                             </div>
                             <div class="input-wrapper">
                                 <span class="input-mini-label">Boş</span>
@@ -792,10 +780,10 @@
                         <strong>Standart Sapma:</strong> σ = 10 (sabit)
                     </div>
                     <div class="info-item">
-                        <strong>Ağırlıklar:</strong> Alan %60, GK %33.33, Dil %6.67
+                        <strong>Ağırlıklar:</strong> Alan %80, GK %13.33, Dil %6.67
                     </div>
                     <div class="info-item">
-                        <strong>Z-Score:</strong> (Puan - 50) / 10 formülü
+                        <strong>Yanlış Ceza:</strong> Yok! Sadece doğrular sayılır
                     </div>
                     <div class="info-item">
                         <strong>Yüzdelik Dilim:</strong> Standart normal dağılım tablosundan
@@ -834,7 +822,7 @@
 
                     <div class="analytics-card">
                         <div class="analytics-header">📊 Toplam Net</div>
-                        <div class="analytics-value" id="total-net">0.00</div>
+                        <div class="analytics-value" id="total-net">0</div>
                         <div class="analytics-desc">Tüm bölümlerdeki net doğru sayınız</div>
                     </div>
                 </div>
@@ -865,16 +853,16 @@
 
                 <div class="breakdown-grid">
                     <div class="breakdown-item">
-                        <span class="breakdown-label">🎯 Alan Bilgisi Net</span>
-                        <span class="breakdown-value" id="alan-net">0.00</span>
+                        <span class="breakdown-label">🎯 Alan Bilgisi Doğru</span>
+                        <span class="breakdown-value" id="alan-net">0</span>
                     </div>
                     <div class="breakdown-item">
-                        <span class="breakdown-label">📚 Genel Kültür Net</span>
-                        <span class="breakdown-value" id="gk-net">0.00</span>
+                        <span class="breakdown-label">📚 Genel Kültür Doğru</span>
+                        <span class="breakdown-value" id="gk-net">0</span>
                     </div>
                     <div class="breakdown-item">
-                        <span class="breakdown-label">🌍 Yabancı Dil Net</span>
-                        <span class="breakdown-value" id="dil-net">0.00</span>
+                        <span class="breakdown-label">🌍 Yabancı Dil Doğru</span>
+                        <span class="breakdown-value" id="dil-net">0</span>
                     </div>
                     <div class="breakdown-item">
                         <span class="breakdown-label">📊 Ağırlıklı Puan</span>
@@ -887,8 +875,8 @@
                     <ul class="info-list">
                         <li class="info-item">Bu hesaplama TAHMİNİ bir değerdir ve resmi sonuç değildir</li>
                         <li class="info-item">Gerçek puanınız sınava giren TÜM adayların performansına göre hesaplanır</li>
-                        <li class="info-item">Her sınavda ortalama ve dağılım değiştiği için aynı net farklı puan verebilir</li>
-                        <li class="info-item">Bu araç geçmiş sınav istatistiklerine dayalı matematiksel bir projeksiyon sunar</li>
+                        <li class="info-item">Her sınavda ortalama ve dağılım değiştiği için aynı doğru farklı puan verebilir</li>
+                        <li class="info-item">Yanlış cevapların doğru cevaplara bir etkisi yoktur (sadece doğrular sayılır)</li>
                         <li class="info-item">Kesin sonuçlar için resmi TESMER açıklamalarını bekleyiniz</li>
                     </ul>
                 </div>
@@ -897,10 +885,10 @@
 
         <footer>
             <p style="font-family: 'Orbitron', sans-serif; font-size: 1.1rem; margin-bottom: 0.5rem;">
-                TESMER PRO - İstatistiksel Analiz Sistemi
+                TESMER PRO - İstatistiksel Analiz Sistemi v2.0
             </p>
             <p style="font-size: 0.875rem; color: var(--text-secondary);">
-                Bu site TESMER ile resmi olarak ilişkili değildir | Geliştirici: Yiğit | 2025
+                Güncel TESMER kurallarına göre düzenlenmiştir | Geliştirici: Yiğit | 2025
             </p>
         </footer>
     </div>
@@ -920,23 +908,16 @@
         }
         createParticles();
 
-        // Auto-update empty fields
+        // Auto-update empty fields (NO WRONG ANSWER PENALTY!)
         function updateBos(section, total) {
             const dogru = parseInt(document.getElementById(`${section}-d`).value) || 0;
-            const yanlis = parseInt(document.getElementById(`${section}-y`).value) || 0;
-            const bos = total - dogru - yanlis;
+            const bos = total - dogru;
             document.getElementById(`${section}-b`).value = Math.max(0, bos);
         }
 
-        ['alan-d', 'alan-y'].forEach(id => {
-            document.getElementById(id).addEventListener('input', () => updateBos('alan', 100));
-        });
-        ['gk-d', 'gk-y'].forEach(id => {
-            document.getElementById(id).addEventListener('input', () => updateBos('gk', 20));
-        });
-        ['dil-d', 'dil-y'].forEach(id => {
-            document.getElementById(id).addEventListener('input', () => updateBos('dil', 10));
-        });
+        document.getElementById('alan-d').addEventListener('input', () => updateBos('alan', 100));
+        document.getElementById('gk-d').addEventListener('input', () => updateBos('gk', 20));
+        document.getElementById('dil-d').addEventListener('input', () => updateBos('dil', 10));
 
         // Draw bell curve
         function drawBellCurve() {
@@ -960,31 +941,39 @@
         }
 
         function hesapla() {
-            // Get inputs
+            // Get inputs (DOĞRU sayıları only - NO PENALTY!)
             const alanD = parseInt(document.getElementById('alan-d').value) || 0;
-            const alanY = parseInt(document.getElementById('alan-y').value) || 0;
             const gkD = parseInt(document.getElementById('gk-d').value) || 0;
-            const gkY = parseInt(document.getElementById('gk-y').value) || 0;
             const dilD = parseInt(document.getElementById('dil-d').value) || 0;
-            const dilY = parseInt(document.getElementById('dil-y').value) || 0;
 
-            // Calculate nets (4 wrong = 1 right penalty)
-            const alanNet = alanD - (alanY / 4);
-            const gkNet = gkD - (gkY / 4);
-            const dilNet = dilD - (dilY / 4);
-            const totalNet = alanNet + gkNet + dilNet;
+            // Total correct answers (NO WRONG ANSWER PENALTY!)
+            const totalNet = alanD + gkD + dilD;
 
-            // Convert to standard scores (mean=50, sd=10)
-            // Assuming average performance: 60/100 alan, 12/20 gk, 5/10 dil
-            const alanStd = 50 + ((alanNet - 60) / 60) * 30;
-            const gkStd = 50 + ((gkNet - 12) / 12) * 30;
-            const dilStd = 50 + ((dilNet - 5) / 5) * 30;
+            // Calculate performance ratio for each section
+            // Using historical average: ~60% correct is average performance
+            const alanPerformance = alanD / 100;
+            const gkPerformance = gkD / 20;
+            const dilPerformance = dilD / 10;
 
-            // Weighted score
-            const weightedScore = (alanStd * 0.60) + (gkStd * 0.3333) + (dilStd * 0.0667);
+            // Average performance assumption: 0.60 (60% correct)
+            // Standard deviation: 0.15 (15%)
+            const avgPerf = 0.60;
+            const stdPerf = 0.15;
+
+            // Calculate standard scores (mean=50, sd=10) for each section
+            const alanZ = (alanPerformance - avgPerf) / stdPerf;
+            const gkZ = (gkPerformance - avgPerf) / stdPerf;
+            const dilZ = (dilPerformance - avgPerf) / stdPerf;
+
+            const alanStd = 50 + (alanZ * 10);
+            const gkStd = 50 + (gkZ * 10);
+            const dilStd = 50 + (dilZ * 10);
+
+            // CORRECT WEIGHTS: Alan 80%, GK 13.33%, Dil 6.67%
+            const weightedScore = (alanStd * 0.80) + (gkStd * 0.1333) + (dilStd * 0.0667);
             const finalScore = Math.max(0, Math.min(100, weightedScore));
 
-            // Calculate Z-score
+            // Calculate overall Z-score
             const zScore = (finalScore - 50) / 10;
             
             // Calculate percentile
@@ -1000,10 +989,10 @@
             document.getElementById('z-score').textContent = zScore.toFixed(2);
             document.getElementById('percentile').textContent = percentile.toFixed(1) + '%';
             document.getElementById('success-prob').textContent = successProb.toFixed(0) + '%';
-            document.getElementById('total-net').textContent = totalNet.toFixed(2);
-            document.getElementById('alan-net').textContent = alanNet.toFixed(2);
-            document.getElementById('gk-net').textContent = gkNet.toFixed(2);
-            document.getElementById('dil-net').textContent = dilNet.toFixed(2);
+            document.getElementById('total-net').textContent = totalNet;
+            document.getElementById('alan-net').textContent = alanD;
+            document.getElementById('gk-net').textContent = gkD;
+            document.getElementById('dil-net').textContent = dilD;
             document.getElementById('weighted-score').textContent = finalScore.toFixed(2);
 
             // Update score bar
